자체 게임 엔진을 이용한 에디터 구동 / GameEngine - Editor - Game 상호 구조를 구상함
 - Game Engine -> Graphics Engine 의 구동을 컨트롤해서 에디터가 구동되도록 설정

--- a/DUOLEditor/DUOLEditor.vcxproj.filters
+++ b/DUOLEditor/DUOLEditor.vcxproj.filters
@@ -204,7 +204,10 @@
     <ClInclude Include="include\DUOLEditor\Util\Font.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="include\DUOLEditor\Core\Hierarchy.h">
+    <ClInclude Include="include\DUOLEditor\Modules\Hierarchy.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -395,7 +398,10 @@
     <ClCompile Include="src\DUOLEditor\Util\Font.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="src\DUOLEditor\Core\Hierarchy.cpp">
+    <ClCompile Include="src\DUOLEditor\Modules\Hierarchy.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\Modules\ViewBase.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
