하이어라키 뷰에서 오브젝트 선택 / Drag and Drop을 통한 하이어라키 변경
 - 에디터 내부의 조작 EventSystem 에서 에디터의 모든 수행 기능 (오브젝트 선택, 오브젝트 삭제, 씬 변경 등 ..) 에 따라 발생하는 각 이벤트에 모든 GUI들의 동작에 따른 이벤트 리스너들을 EventSystem에 등록하고 호출하도록 구현
 - 위의 방법에 이벤트 등록을 통해 오브젝트가 선택될 수 있도록 구현함.

--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLEditor\Modules\HierarchyContextMenu.h" />
+    <ClInclude Include="include\DUOLEditor\Modules\EditorEventManager.h" />
     <ClInclude Include="include\DUOLEditor\Modules\Hierarchy.h" />
     <ClInclude Include="include\DUOLEditor\TestScenes\CometTestScene.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\CoroutineLogTest.h" />
@@ -92,6 +94,8 @@
     <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\Modules\HierarchyContextMenu.cpp" />
+    <ClCompile Include="src\DUOLEditor\Modules\EditorEventManager.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\Hierarchy.cpp" />
     <ClCompile Include="src\DUOLEditor\TestScenes\CometTestScene.cpp" />
     <ClCompile Include="src\DUOLEditor\TestScripts\CoroutineLogTest.cpp" />
