Animation 적용 안되는 버그

--- a/DUOLGame/DUOLGame.vcxproj
+++ b/DUOLGame/DUOLGame.vcxproj
@@ -159,6 +159,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGame\ProtoType\PlayerStates\PlayerControlCondition.cpp" />
+    <ClCompile Include="src\DUOLGame\ProtoType\Scripts\SceneController.cpp" />
     <ClCompile Include="src\DUOLGame\ProtoType\PlayerStates\PlayerJump.cpp" />
     <ClCompile Include="src\DUOLGame\ProtoType\PlayerStates\PlayerGroundCondition.cpp" />
     <ClCompile Include="src\DUOLGame\ProtoType\PlayerStates\PlayerAttack.cpp" />
@@ -169,13 +171,6 @@
     <ClCompile Include="src\DUOLGame\ProtoType\Objects\PlayerCharacter.cpp" />
     <ClCompile Include="src\DUOLGame\ProtoType\Scripts\CameraController.cpp" />
     <ClCompile Include="src\DUOLGame\ProtoType\Scenes\ProtoTypeScene.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScenes\SHTestScene.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScripts\CreateAndDestroyTest.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScripts\MoveController.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScripts\PhysicsEventTest.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScripts\EnableTest.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScripts\CoroutineLogTest.cpp" />
-    <ClCompile Include="src\DUOLGame\TestScenes\CometTestScene.cpp" />
     <ClCompile Include="src\DUOLGame\Application.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -191,11 +186,8 @@
     <ClInclude Include="Include\DUOLGame\ProtoType\PlayerStates\PlayerAttack.h" />
     <ClInclude Include="Include\DUOLGame\ProtoType\PlayerStates\PlayerGroundCondition.h" />
     <ClInclude Include="Include\DUOLGame\ProtoType\PlayerStates\PlayerJump.h" />
-    <ClInclude Include="Include\DUOLGame\TestScripts\ModelShooter.h" />
-    <ClInclude Include="Include\DUOLGame\TestScenes\YDTestScene.h" />
-    <ClInclude Include="Include\DUOLGame\TestScripts\PhysicsEventTest.h" />
-    <ClInclude Include="Include\DUOLGame\TestScripts\MoveController.h" />
-    <ClInclude Include="Include\DUOLGame\TestScenes\SHTestScene.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\Scripts\SceneController.h" />
+    <ClInclude Include="Include\DUOLGame\ProtoType\PlayerStates\PlayerControlCondition.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
