--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -248,8 +248,10 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\SphereCollider.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\SkinnedMeshRenderer.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\ParticleRenderer.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\Light.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\Light.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Avatar.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ParticleRenderer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimationClip.cpp" />
