Transform bug fix / Light Component 구현 및 테스트 완료 (SpotLight는 보류)
 - RotateAround 의도대로 잘 동작하지 않던 버그 수정
 - Transform Children Update에서 LookRightUp 갱신 안되던 버그 수정
 - Light Component 테스트 완

--- a/DUOLGame/DUOLGame.vcxproj
+++ b/DUOLGame/DUOLGame.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="src\DUOLGame\TestScripts\ModelShooter.cpp" />
     <ClCompile Include="src\DUOLGame\TestScenes\YDTestScene.cpp" />
+    <ClCompile Include="src\DUOLGame\TestScripts\RotateAroundOrigin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\TestScripts\CreateAndDestroyTest.h" />
@@ -182,6 +183,7 @@
     <ClInclude Include="Include\DUOLGame\TestScripts\PhysicsEventTest.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\MoveController.h" />
     <ClInclude Include="Include\DUOLGame\TestScenes\SHTestScene.h" />
+    <ClInclude Include="Include\DUOLGame\TestScripts\RotateAroundOrigin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
