--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -191,6 +191,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorControllerLayer.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorState.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorStateMachine.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorController.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Avatar.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimationClip.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Animator.h" />
@@ -251,6 +255,8 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Light.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorControllerLayer.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorState.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Light.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Avatar.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ParticleRenderer.cpp" />
@@ -302,6 +308,8 @@
     <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\WaitForSecondsRealtime.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshRenderer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\SphereCollider.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorController.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorStateMachine.cpp" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ConditionNode.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ActionNode.h" />
     <ClInclude Include="include\DUOLGameEngine\Event\EventSystem.h" />
