ColorGradient 구현 완료.
유저 인터페이스 제작 업무 마무리.
ColorGradient 구현 완료.
hlsl 컴파일 방법 개선 중.

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\ColorGradientBar.cpp" />
     <ClCompile Include="src\MoveTool.cpp" />
     <ClCompile Include="src\Commands.cpp" />
     <ClCompile Include="src\Inspector_GameObject.cpp" />
@@ -193,6 +194,7 @@
     <ClCompile Include="src\TextureLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\ColorGradientBar.h" />
     <ClInclude Include="include\Commands.h" />
     <ClInclude Include="include\EffectEditorManager.h" />
     <ClInclude Include="include\DockSpace.h" />
