--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\Commands.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\ColorGradientBar.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GameProcess.h">
@@ -105,6 +108,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\Commands.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ColorGradientBar.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
