--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
@@ -241,5 +241,6 @@
     <None Include="..\..\Build\x64\Debug\Asset\Particle\Shader\DeferredRendering.hlsli" />
     <None Include="..\..\Build\x64\Debug\Asset\Particle\Shader\LightHelper.hlsli" />
     <None Include="..\..\Build\x64\Debug\Asset\Particle\Shader\ParticleHelper.hlsli" />
+    <None Include="..\..\Build\x64\Debug\Asset\Particle\Shader\Common.hlsli" />
   </ItemGroup>
 </Project>
