컨텐츠와 엔진에서 사용할 수 있는 EventManager System 구현 완료
 - 이름으로 매니저에 이벤트 등록 후 이벤트 함수를 수동으로 여러 스크립트에서 등록하면 EventManager::SendEventMessage 를 통해 메시지를 Queuing 후 Update 문에서 전부 호출합니다.

 - AnimationClip에 Keyframe Event 등록 후 호출할 수 있도록 구현 중

--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -191,6 +191,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\Manager\EventManager.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorControllerLayer.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorState.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorStateMachine.h" />
@@ -255,6 +256,7 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Light.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\Manager\EventManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorControllerLayer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimatorController\AnimatorState.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Light.cpp" />
