--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLEditor\Modules\GameView.h" />
     <ClInclude Include="include\DUOLEditor\Modules\HierarchyContextMenu.h" />
     <ClInclude Include="include\DUOLEditor\Modules\EditorEventManager.h" />
     <ClInclude Include="include\DUOLEditor\Modules\Hierarchy.h" />
@@ -87,6 +88,7 @@
     <ClInclude Include="include\DUOLEditor\UI\Panels\PanelMenuBar.h" />
     <ClInclude Include="include\DUOLEditor\UI\Panels\PanelUndecorated.h" />
     <ClInclude Include="include\DUOLEditor\UI\Panels\PanelWindow.h" />
+    <ClInclude Include="include\DUOLEditor\Modules\SceneView.h" />
     <ClInclude Include="src\DUOLEditor\UI\Widgets\Plots\PlotHistogram.cpp" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Menu\MenuList.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\TreeNode.h" />
@@ -94,6 +96,8 @@
     <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\Modules\GameView.cpp" />
+    <ClCompile Include="src\DUOLEditor\Modules\SceneView.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\HierarchyContextMenu.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\EditorEventManager.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\Hierarchy.cpp" />
